Twenty Fourteen: fix gap beneath header image, props taupecat. Fixes #25404. Built from https://develop.svn.wordpress.org/trunk@25611
git-svn-id: http://core.svn.wordpress.org/trunk@25528 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -83,6 +83,7 @@ a:active { /* Improves readability when focused and also mouse hovered in all br
 }
 a img {
 	border: 0;
+	display: block;
 }
 
 /* =Global
@@ -1390,13 +1391,6 @@ footer.entry-meta .entry-title a:hover {
 img {
 	max-width: 100%;
 	height: auto;
-}
-.site-header img,
-.attachment-featured-thumbnail-large,
-.entry-content img,
-.comment-content img,
-.widget img {
-	vertical-align: middle;
 }
 .attachment-featured-featured img,
 .attachment-featured-thumbnail img {
